--- a/css/index/mobil.css
+++ b/css/index/mobil.css
@@ -4,7 +4,8 @@
     justify-content: center;
     align-items: center;
     text-align: center;
-    padding: 14em 5% 0; /* luft over seksjonen for å dytte den ned fra forsidebilde + en 5% marg på sidene */
+    padding: 14em 5% 0;
+    /* luft over seksjonen for å dytte den ned fra forsidebilde + en 5% marg på sidene */
 }
 
 #mobil .mobil-graphic {
@@ -14,6 +15,7 @@
 
 #mobil .mobil-graphic img {
     width: 500px;
+    height: 700px;
 }
 
 #mobil .mobil-text {
@@ -56,11 +58,12 @@
 
 
     #mobil .mobil-graphic img {
-        width: 80%;
+        width: 500px;
+        height: 100%;
     }
 
     #mobil .mobil-text h2 {
-        font-size: 2.7rem;
+        font-size: 3.5rem;
     }
 
     #mobil .mobil-text p {
@@ -78,7 +81,7 @@
     #mobil {
         grid-template-columns: 1fr;
     }
-    
+
     #mobil .mobil-graphic {
         grid-row-start: 2;
         justify-self: center;
@@ -88,9 +91,9 @@
         width: 100%;
     }
 
-    
+
     #mobil .mobil-text h2 {
-        font-size: 2rem;
+        font-size: 3rem;
     }
 
     #mobil .mobil-text p {
